test/Fail/NoIrrelevance7.agda
{-# OPTIONS --no-irrelevance #-}

data D : Set where
    c : .D → D
